# glyphr

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: glyphr_test_window.rs  gui_test.rs
fonts/: fonts.json
glyphr/: Cargo.toml  README.md
glyphr-macros/: Cargo.toml  NOTICE  README.md
glyphr-macros/src/: config.rs  lib.rs  macro_parser.rs  renderer.rs  toml_parser.rs
glyphr-macros/src/generator/: font.rs  font_geometry.rs  line.rs  mod.rs  sdf_generation.rs  vec2.rs
glyphr-macros/templates/: fonts.rs.j2
glyphr/examples/: font_cover.rs  glyphr_test.rs  glyphr_test_window.rs
glyphr/src/: api.rs  font.rs  glyph.rs  lib.rs  renderer.rs  rle.rs  sdf.rs  utils.rs
src/: font.rs  glyph.rs  lib.rs  renderer.rs  sdf.rs  utils.rs
templates/: fonts.rs.j2
