[package]
name = "glyphr"
version = "0.2.3"
edition = "2024"
authors = ["Alessandro Bridi <ale.bridi15@gmail.com>"]
description = "A no_sdt, lightweight and simple font rasterizing library"
license = "Apache-2.0"
repository = "https://github.com/Bridiro/glyphr"
build = "build/main.rs"
keywords = ["sdf", "font", "rasterizer"]
categories = ["no-std", "no-std::no-alloc", "graphics", "embedded"]

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ttf-parser = "0.25"

[dependencies]
minifb = "0.28"
