[package]
name = "glyphr-macros"
version = "0.1.1"
edition = "2024"
authors = ["Alessandro Bridi <ale.bridi15@gmail.com>"]
description = "Set of proc-macros used to generate fonts for glyphr"
license = "Apache-2.0"
keywords = ["sdf", "font", "proc-macro", "codegen"]
categories = ["graphics", "embedded"]
repository = "https://github.com/Bridiro/glyphr"

[lib]
proc-macro = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8.23"}
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
ttf-parser = "0.25"
minijinja = "2.10.2"

[features]
toml = []
